feat: - add telegram auth and mongodb

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "demoproject",
-  "version": "0.0.1",
+  "version": "1.0.1",
   "description": "auth project",
   "main": "server.js",
   "scripts": {
@@ -21,16 +21,15 @@
   },
   "homepage": "https://github.com/saniok017/demoproject#readme",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "concurrently": "^4.1.0",
     "cors": "^2.8.5",
+    "ejs": "^2.6.1",
     "express": "^4.16.4",
-    "express-partials": "^0.3.0",
     "express-session": "^1.16.1",
     "isomorphic-unfetch": "^3.0.0",
-    "method-override": "^3.0.0",
     "mongoose": "^5.5.4",
-    "passport": "^0.4.0"
+    "passport": "^0.4.0",
+    "passport-telegram": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.11"
