--- a/server/config/config.json
+++ b/server/config/config.json
@@ -5,5 +5,10 @@
     "origin": "http://localhost:3000",
     "methods": "GET,HEAD,PUT,PATCH,POST,DELETE",
     "credentials": true
+  },
+  "telegramAuth": {
+    "clientID": "<set your Secret here>",
+    "clientSecret": "<set your App ID here>",
+    "callbackURL": "http://localhost:3000/auth/telegram/callback"
   }
 }
