--- a/package.json
+++ b/package.json
@@ -41,7 +41,22 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-prettier": "^3.0.1",
     "husky": "^2.2.0",
+    "lint-staged": "^8.1.6",
     "nodemon": "^1.18.11",
     "prettier": "^1.13.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "linters": {
+      "*.js": [
+        "eslint -c .eslintrc.js --fix",
+        "prettier --write",
+        "git add"
+      ]
+    }
   }
 }
