--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -22,11 +22,11 @@
     "rules": {
         "indent": [
             "error",
-            4
+            2
         ],
         "linebreak-style": [
             "error",
-            "unix"
+            "windows"
         ],
         "quotes": [
             "error",
