--- a/client/package.json
+++ b/client/package.json
@@ -15,5 +15,8 @@
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1",
     "webpack-dev-server": "^3.3.1"
+  },
+  "dependencies": {
+    "styled-components": "^4.2.0"
   }
 }
