--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "concurrently": "^4.1.0",
     "config": "^3.1.0",
     "cors": "^2.8.5",
+    "cron": "^1.7.1",
     "cross-env": "^5.2.0",
     "dotenv": "^7.0.0",
     "ejs": "^2.6.1",
