--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 language: node_js
 node_js:
   - '11'
+  - '10'
 services:
   - mongodb
 install:
-  - npm install -g codecov istanbul@1.0.0-alpha.2
+  - npm install -g codecov
 script:
-  - istanbul cover _mocha --reporter lcovonly -- -R spec
-  - codecov
+  - test
+sudo: false
+after_success:
+  - ./bin/codecov -e TRAVIS_NODE_VERSION -f coverage/*.json
