--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint -c .eslintrc.js ./server/**/*.js",
     "fix-lint": "eslint -c .eslintrc.js ./server/**/*.js --fix",
     "format": "prettier --write \"server/**/*.js\"",
-    "test": "jest --coverage && codecov"
+    "test": "jest",
+    "codecov": "jest --coverage && codecov"
   },
   "repository": {
     "type": "git",
