--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "mongodb": "^3.2.4",
     "mongoose": "^5.5.4",
     "passport": "^0.4.0",
-    "passport-telegram": "^1.0.0"
+    "passport-telegram": "^1.0.0",
+    "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^3.9.0"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.0.1",
