--- a/package.json
+++ b/package.json
@@ -61,9 +61,11 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged",
-      "pre-push": "npm test"
+      "pre-commit": "lint-staged"
     }
+  },
+  "engines": {
+    "node": ">=8.0.0 <12.2.0"
   },
   "lint-staged": {
     "linters": {
