--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint -c .eslintrc.js ./server/**/*.js",
     "fix-lint": "eslint -c .eslintrc.js ./server/**/*.js --fix",
     "format": "prettier --write \"server/**/*.js\"",
-    "test": "jest --coverage && codecov"
+    "test": "jest",
+    "codecov": "jest --coverage && codecov"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,7 @@
     "concurrently": "^4.1.0",
     "config": "^3.1.0",
     "cors": "^2.8.5",
+    "cron": "^1.7.1",
     "cross-env": "^5.2.0",
     "dotenv": "^7.0.0",
     "ejs": "^2.6.1",
@@ -40,7 +42,9 @@
     "mongoose": "^5.5.4",
     "node-telegram-bot-api": "^0.30.0",
     "passport": "^0.4.0",
-    "passport-telegram": "^1.0.0"
+    "passport-telegram": "^1.0.0",
+    "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^3.9.0"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.0.1",
@@ -52,6 +56,7 @@
     "husky": "^2.2.0",
     "jest": "^24.8.0",
     "lint-staged": "^8.1.6",
+    "mongo-mock": "^3.4.0",
     "nodemon": "^1.18.11",
     "prettier": "^1.13.0"
   },
