--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "husky": "^2.2.0",
     "jest": "^24.8.0",
     "lint-staged": "^8.1.6",
+    "lodash": "^4.17.11",
     "mongo-mock": "^3.4.0",
     "nodemon": "^1.18.11",
     "prettier": "^1.13.0"
