--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node.js-powered backend for Random Coffee service",
   "main": "server.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node server.js",
+    "start": "env NODE_ENV=production node server.js",
     "server": "nodemon server.js",
     "lint": "eslint -c .eslintrc.js ./server/**/*.js",
     "fix-lint": "eslint -c .eslintrc.js ./server/**/*.js --fix",
@@ -23,40 +23,32 @@
   },
   "homepage": "https://github.com/share-n-coffee/server/#readme",
   "dependencies": {
-    "concurrently": "^4.1.0",
-    "config": "^3.1.0",
-    "cors": "^2.8.5",
-    "cron": "^1.7.1",
-    "cross-env": "^5.2.0",
-    "dotenv": "^7.0.0",
-    "ejs": "^2.6.1",
-    "eslint": "^5.0.0",
-    "express": "^4.16.4",
-    "express-session": "^1.16.1",
-    "isomorphic-unfetch": "^3.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.2.4",
-    "mongoose": "^5.7.5",
-    "node-telegram-bot-api": "^0.30.0",
-    "passport": "^0.4.0",
-    "passport-telegram": "^1.0.0",
-    "winston": "^3.2.1",
-    "winston-daily-rotate-file": "^3.9.0"
+    "concurrently": "4.1.0",
+    "config": "3.1.0",
+    "cors": "2.8.5",
+    "cron": "1.7.1",
+    "dotenv": "7.0.0",
+    "ejs": "2.6.1",
+    "eslint": "5.0.0",
+    "express": "4.16.4",
+    "jsonwebtoken": "8.5.1",
+    "mongodb": "3.2.4",
+    "mongoose": "5.7.5",
+    "node-telegram-bot-api": "0.30.0",
+    "winston": "3.2.1",
+    "winston-daily-rotate-file": "3.9.0"
   },
   "devDependencies": {
-    "@shelf/jest-mongodb": "^1.0.1",
-    "codecov": "^3.4.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-prettier": "^4.2.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "husky": "^2.2.0",
-    "jest": "^24.8.0",
-    "lint-staged": "^8.1.6",
-    "lodash": "^4.17.11",
-    "mongo-mock": "^3.4.0",
-    "nodemon": "^1.18.11",
-    "prettier": "^1.13.0"
+    "codecov": "3.4.0",
+    "eslint-config-airbnb-base": "13.1.0",
+    "eslint-config-prettier": "4.2.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-prettier": "3.0.1",
+    "husky": "2.2.0",
+    "jest": "24.8.0",
+    "lint-staged": "8.1.6",
+    "nodemon": "1.18.11",
+    "prettier": "1.13.0"
   },
   "husky": {
     "hooks": {
